correction contraste

--- a/style.css
+++ b/style.css
@@ -782,6 +782,10 @@ h4 {
     color: white;
 }
 
+.tc-black {
+    color: black;
+}
+
 .btn-atomic-tangerine {
     background: #F3976C;
     color: #303030;
